--- a/src/pug/blocks/navbar-header.pug
+++ b/src/pug/blocks/navbar-header.pug
@@ -1,5 +1,4 @@
 .navbar-header#navbar-header
-    //- .navbar__container
     a(href="" class="container-logo") 
         <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 267.34 93.8"><defs><style>.cls-1{fill:red;}.cls-2{fill:#969696;}</style></defs><title>Recurso 5</title><g id="Capa_2" data-name="Capa 2"><g id="Capa_1-2" data-name="Capa 1"><polygon class="cls-1" points="104.89 67.47 76.44 33.77 104.31 0 86.65 0 67.5 23.17 47.94 0 29.82 0 58.51 34.04 9.12 93.8 30.52 89.41 67.46 44.66 86.68 67.47 104.89 67.47"/>
 
@@ -22,7 +21,7 @@
             div(id="hamburguer" class="hamburguer navbar-header__button--hamburguer")
                 .hamburguer__div-center#hamburguer__div-center
         .navbar__links#navbar__links
-            a(href="#section-top" class="navbar__link animated-border navbar__link--active " ) Inicio
-            a(href="#section-galery" class="navbar__link animated-border " ) Camisetas
-            a(href="#section-prices" class="navbar__link animated-border " ) Tiendas
-            a(href="#section-map" class="navbar__link animated-border " ) WhatsApp
+            a(href="" class="navbar__link animated-border navbar__link--active " ) Inicio
+            a(href="" class="navbar__link animated-border " ) Catalogo
+            a(href="" class="navbar__link animated-border " ) Tiendas
+            a(href="" class="navbar__link animated-border " ) WhatsApp
