--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,10 +10,11 @@ block head
 block header
     .video-header
         <video class="video-header__portrait"autoplay loop muted >
-            <source  src="/video/video-portrait.mp4" type="video/mp4">
+            <source  src="video-header-portrait.webm" type="video/mp4">
+            //- <source  src="/video/video-portrait.mp4" type="video/mp4">
         </video>
         <video class="video-header__landscape" autoplay loop muted >
-            <source  src="/video/video-landscape.mp4" type="video/mp4">
+            <source  src="video-header.webm" type="video/mp4">
         </video>
 
         .video-header__text
@@ -31,8 +32,8 @@ block main
             .swiper-wrapper
                 .swiper-slide
                     <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80">
-                        img(class="mySwiper__img" src="https://images.unsplash.com/photo-1503342296413-28a6ec3768b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80", alt="alt")
+                        <source media="(orientation: landscape)" srcset="./img/oversize-landscape.webp">
+                        img(class="mySwiper__img" src="./img/oversize-portrait.webp" alt="alt")
                     </picture>
                     .mySwiper__text
                         h2.h2.mySwiper__title Camisetas Basícas Estampadas
@@ -40,12 +41,12 @@ block main
                         a(class="mybtn" href="") Ver más
                 .swiper-slide
                     <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503341733017-1901578f9f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80">
-                        img(class="mySwiper__img" src="https://images.unsplash.com/photo-1502389614483-e475fc34407e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80", alt="")
+                        <source media="(orientation: landscape)" srcset="./img/buzo-landscape.webp">
+                        img(class="mySwiper__img" src="./img/buzo-portrait.webp" alt="")
                     </picture>
                     .mySwiper__text 
-                        h2.h2.mySwiper__title Camisetas Basícas Estampadas
-                        p.p Camisetas 100% algodón con estampados en serigrafia
+                        h2.h2.mySwiper__title Busos Estampados
+                        p.p Buzos 100% algodón con estampados en serigrafia
                         a(class="mybtn" href="") Ver más
             .mySwiper__buttons
                 .swiper-button-next.mybtn
@@ -55,62 +56,32 @@ block main
                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="M399.077-96.616 15.693-480l383.384-383.384 44.961 44.884L105.153-480l338.885 337.807-44.961 45.577Z"/></svg>
             //- .swiper-pagination
     section.section-new
-        h2.h1.new__h1 Camisetas Básicas Estampadas
+        h2.h1.new__h1 Nueva Colección
         .products
-            .product
-                .product__imgs
-                    img(class="product__img product__img-1"  src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600", alt="alt")
-                    img(class="product__img product__img-2"  src="https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600", alt="alt")
-                .product__text
-                    h4.h4 Camiseta Bart Break
-                    span $65.000
-            .product
-                .product__imgs
-                    img(class="product__img product__img-1"  src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600", alt="alt")
-                    img(class="product__img product__img-2"  src="https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600", alt="alt")
-                .product__text
-                    h4.h4 Camiseta Bart Break
-                    span $65.000
-            .product
-                .product__imgs
-                    img(class="product__img product__img-1"  src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600", alt="alt")
-                    img(class="product__img product__img-2"  src="https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600", alt="alt")
-                .product__text
-                    h4.h4 Camiseta Bart Break
-                    span $65.000
-            .product
-                .product__imgs
-                    img(class="product__img product__img-1"  src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600", alt="alt")
-                    img(class="product__img product__img-2"  src="https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600", alt="alt")
-                .product__text
-                    h4.h4 Camiseta Bart Break
-                    span $65.000
-            .product
-                .product__imgs
-                    img(class="product__img product__img-1"  src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600", alt="alt")
-                    img(class="product__img product__img-2"  src="https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600", alt="alt")
-                .product__text
-                    h4.h4 Camiseta Bart Break
-                    span $65.000
-            
+            include ../blocks/product.pug
+            include ../blocks/product.pug
+            include ../blocks/product.pug
+            include ../blocks/product.pug
+            include ../blocks/product.pug
+            include ../blocks/product.pug
 
     section.section-4
         .swiper.slider-hook
             .swiper-wrapper
                 .swiper-slide
                     <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80">
-                        img(class="slider-hook__img" src="https://images.unsplash.com/photo-1503342296413-28a6ec3768b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80", alt="alt")
+                        <source media="(orientation: landscape)" srcset="./img/01-landscape.webp">
+                        img(class="slider-hook__img" src="./img/01-portrait.webp" alt="alt")
                     </picture>
                 .swiper-slide
                     <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503341733017-1901578f9f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80">
-                        img(class="slider-hook__img" src="https://images.unsplash.com/photo-1502389614483-e475fc34407e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80", alt="")
+                        <source media="(orientation: landscape)" srcset="./img/02-landscape.webp">
+                        img(class="slider-hook__img" src="./img/02-portrait.webp" alt="")
                     </picture>
                 .swiper-slide
                     <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503341733017-1901578f9f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80">
-                        img(class="slider-hook__img" src="https://images.unsplash.com/photo-1502389614483-e475fc34407e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80", alt="")
+                        <source media="(orientation: landscape)" srcset="./img/03-landscape.webp">
+                        img(class="slider-hook__img" src="./img/03-portrait.webp" alt="")
                     </picture>
             .slider-hook__buttons
                 //- .swiper-button-next.mybtn
@@ -128,17 +99,17 @@ block main
                 <svg class="card__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960" ><path d="M222.873-180.77q-45.046 0-77.248-32.249-32.202-32.248-32.202-77.905H57.116v-430.21q0-22.632 16.63-39.363 16.63-16.732 39.524-16.732h555.845v156.153h93.461l141 188.308v141.844h-64.692q0 45.657-32.553 77.905-32.553 32.249-77.919 32.249-45.207 0-77.328-32.249-32.122-32.248-32.122-77.905H333.346q0 45.808-32.714 77.981-32.713 32.173-77.759 32.173Zm.165-43.846q27.424 0 46.943-19.173t19.519-46.942q0-27.77-19.467-46.943-19.468-19.173-46.649-19.173-27.769 0-46.942 19.173-19.173 19.173-19.173 46.943 0 27.769 19.173 46.942 19.173 19.173 46.596 19.173ZM100.961-334.769h21.135q12.134-28.654 39.579-47.443Q189.12-401 222.535-401q32.645 0 60.228 18.808t40.737 47.423h301.77v-398.615h-512q-4.808 0-8.558 3.846-3.751 3.847-3.751 8.462v386.307Zm627.616 110.153q27.423 0 46.943-19.173 19.519-19.173 19.519-46.942 0-27.77-19.467-46.943-19.468-19.173-46.649-19.173-27.769 0-46.943 19.173-19.173 19.173-19.173 46.943 0 27.769 19.173 46.942 19.174 19.173 46.597 19.173Zm-59.462-193.999h190.692L739.538-577.231h-70.423v158.616ZM363.423-526.461Z"/></svg>
                 h3.h3 Envío gratis
                 p.p Hacemos envío a todo el pais
-                a(class="card__btn mybtn mybtn--outlined"  href="") Más información
+                a(class="card__btn mybtn mybtn--outlined" href="") Más información
             .card.card--contra-entrega
                 <svg class="card__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960" ><path d="M457.464-204.462H500v-49.662q54.118-3.913 90.29-32.784 36.171-28.87 36.171-81.515 0-48.438-27.95-78.199-27.95-29.761-98.05-57.685-61.846-24.385-84.462-43-22.615-18.616-22.615-51.385 0-31.769 24.231-51.846 24.231-20.078 64.45-20.078 29.56 0 51.639 13.356 22.079 13.355 37.681 39.26l36.384-17.419q-17.5-32.004-44.423-49.754-26.924-17.75-61.346-20.963v-48.786h-42.615v48.769q-51.462 6.692-79.846 36.438-28.385 29.746-28.385 71.065 0 46.535 28.731 73.592Q408.616-498 471.066-473q66.358 27.231 89.954 48.653 23.596 21.422 23.596 55.885 0 37.001-29.443 57.039-29.442 20.039-68.558 20.039-37.346 0-67.856-21.077-30.51-21.077-44.913-58l-38.615 13.692q21.232 42.581 50.901 66.043 29.669 23.462 71.332 34.354v51.91Zm22.625 101.384q-77.534 0-146.233-29.867-68.699-29.866-119.931-81.153-51.232-51.287-81.039-119.824-29.808-68.537-29.808-145.989 0-78.149 29.867-147.041 29.866-68.891 81.153-119.873 51.287-50.982 119.824-80.539 68.537-29.558 145.989-29.558 78.149 0 147.047 29.735 68.897 29.735 119.873 80.654 50.976 50.918 80.533 119.648 29.558 68.729 29.558 146.796 0 77.534-29.617 146.233-29.616 68.699-80.653 119.931-51.037 51.232-119.767 81.039-68.729 29.808-146.796 29.808Zm-.135-43.845q138.623 0 235.873-97.512t97.25-235.519q0-138.623-97.205-235.873-97.204-97.25-235.826-97.25-138.007 0-235.565 97.205-97.558 97.204-97.558 235.826 0 138.007 97.512 235.565 97.512 97.558 235.519 97.558ZM480-480Z"/></svg>
                 h3.h3 Pago contra entrega
                 p.p Puedes pagar cuando recibas
-                a(class="card__btn mybtn mybtn--outlined"  href="") Más información
+                a(class="card__btn mybtn mybtn--outlined" href="") Más información
             .card 
                 <svg class="card__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960" ><path d="M856.922-721.152v482.304q0 22.614-16.732 39.345-16.732 16.732-39.338 16.732H159.148q-22.606 0-39.338-16.732-16.732-16.731-16.732-39.345v-482.304q0-22.614 16.732-39.345 16.732-16.732 39.338-16.732h641.704q22.606 0 39.338 16.732 16.732 16.731 16.732 39.345ZM146.923-615.614h666.154v-105.462q0-4.615-3.847-8.462-3.846-3.846-8.462-3.846H159.232q-4.616 0-8.462 3.846-3.847 3.847-3.847 8.462v105.462Zm0 102.306v274.384q0 4.615 3.847 8.462 3.846 3.846 8.462 3.846h641.536q4.616 0 8.462-3.846 3.847-3.847 3.847-8.462v-274.384H146.923Zm0 286.692v-506.768 506.768Z"/></svg>
                 h3.h3 Sistecredito
                 p.p Extrena ahora y paga después
-                a(class="card__btn mybtn mybtn--outlined"  href="") Más información
+                a(class="card__btn mybtn mybtn--outlined" href="") Más información
         p.payment__p En 
             span Extrene 
             | lo hacemos fácil para ti! Puedes pagar como prefieras y el envío es gratis. ¡Elige lo que más te guste y listo, así de sencillo! Disfruta de tus compras sin complicaciones. 
