--- a/src/pug/blocks/footer.pug
+++ b/src/pug/blocks/footer.pug
@@ -1,5 +1,13 @@
 .footer#footer
     .container-footer
-        h1.h1 Extrene
-        //- a(href="#"  target="_blank" class="mybtn") Agendar cita 
+        .footer__logo
+            include ../blocks/logo.pug
+        .footer__social-networks
+            
+            a(class="footer__social-network" href="https://www.facebook.com/OMOGROUP1980" target="blank" ) 
+                include ../icons/icon-facebook
+                span Facebook
+            a(class="footer__social-network" href="https://www.facebook.com/OMOGROUP1980" target="blank" ) 
+                include ../icons/icon-instagram
+                span Intagram
 
