--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -10,7 +10,7 @@ html(lang="es")
         //- ? STUB --- PRECARGAR FUENTES
         //- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         //- <link rel="preload" href="MaterialIcons-Regular.ttf" as="font" type="font/otf" crossorigin>
-        meta(name="description" content="Descripción del sitio web")
+        meta(name="Extrene" content="Tienda de ropa")
         //- ? STUB --- AUTOR
         meta(name="author" content="Ceo Alg")
         //- ? STUB --- INDEXAR LOS BUSCADORES | no es necesario si esta en index
@@ -32,7 +32,7 @@ html(lang="es")
 
     body.body#body
 
-        -const whatsapp = "+57 3205165839"
+        -const whatsapp = "https://wa.me/+573244117596?text="
         -const facebook = "facebook"
         -const instagram = "@juan.gomez_barber"
         -const correo = "correo@correo.com"
@@ -46,6 +46,6 @@ html(lang="es")
 
             //- include ../blocks/window-search
             include ../blocks/js.pug
-            //- include ../blocks/footer.pug
+            include ../blocks/footer.pug
         include ../blocks/contact-button
 
