--- a/public/tiendas.css
+++ b/public/tiendas.css
@@ -443,7 +443,7 @@ h4 {
   border-radius: 3px;
 }
 
- body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text, body .header .video-header .video-header__text {
+ body .header .header__text {
   position: absolute;
   top: 0;
   right: 0;
@@ -460,13 +460,13 @@ h4 {
   bottom: 0;
 }
 
- body .main .section-3 .cards, body .main .section-3, body .main .section-2, body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text, body .header .video-header .video-header__text, .navbar__hamburguer, .footer .container-footer .footer__social-networks .footer__social-network, .footer .container-footer .footer__social-networks, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
+ body .main .stores .store .store__text, body .main .stores .store, body .main .stores, body .main .section-1__text, body .main .section-1, body .header .header__text, body .header, .navbar__hamburguer, .footer .container-footer .footer__social-networks .footer__social-network, .footer .container-footer .footer__social-networks, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
- body .main .section-3, body .main .section-2, body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text, body .header .video-header .video-header__text, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
+ body .main .stores .store, body .main .section-1__text, body .header .header__text, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
   display: flex;
   flex-direction: column;
 }
@@ -834,363 +834,93 @@ img {
   transform: translateY(100%);
 }
 
-body {
-  position: relative;
-}
 body .header {
   height: 100vh;
-  overflow: hidden;
-}
-body .header .video-header {
-  height: 100%;
   width: 100%;
   position: relative;
 }
-body .header .video-header video {
-  width: 100%;
+body .header .header__img {
   height: 100%;
+  width: 100%;
+}
+body .header .header__img img {
+  height: 100%;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-body .header .video-header .video-header__landscape {
-  display: none;
-}
-@media screen and (min-width: 758px) {
-  body .header .video-header .video-header__portrait {
-    display: none;
-  }
-  body .header .video-header .video-header__landscape {
-    display: block;
-  }
-}
-body .header .video-header .video-header__text {
-  gap: var(--space-9);
-  z-index: 20;
-  padding: var(--space-5);
+body .header .header__text {
+  gap: var(--space-3);
   background-color: rgba(255, 255, 255, 0.7);
-}
-body .header .video-header .video-header__text .video-header__content-text {
-  margin-top: auto;
-  margin-bottom: 30vh;
   overflow: hidden;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   font-weight: 200;
   gap: var(--space-3);
 }
-body .header .video-header .video-header__text .video-header__content-text .video-header__tittle {
+body .header .header__text h2 {
   letter-spacing: 1px;
   line-height: 1.5;
   font-size: 14px;
   text-align: end;
 }
-body .main section {
-  width: 100%;
-}
 body .main .section-1 {
+  flex-direction: column;
   width: 100%;
-  height: 100vh;
-  padding-bottom: var(--space-10);
-}
-body .main .section-1 .mySwiper {
-  height: 100%;
-  width: 100%;
-}
-body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  position: relative;
-}
-body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySlider__picture {
-  width: 100%;
-}
-body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySlider__picture .mySwiper__img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
-}
-body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text {
-  align-items: flex-start;
-  gap: var(--space-3);
-  background-color: rgba(0, 0, 0, 0.25);
-  padding: var(--space-3);
-  height: -moz-min-content;
-  height: min-content;
-  width: -moz-max-content;
-  width: max-content;
-  max-width: 100%;
-  top: auto;
-  bottom: 10%;
-}
-@media screen and (min-width: 1014px) {
-  body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text {
-    bottom: 15%;
-    width: -moz-max-content;
-    width: max-content;
-    margin-left: 15%;
-  }
-}
-body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text h2,
-body .main .section-1 .mySwiper .swiper-wrapper .swiper-slide .mySwiper__text p {
-  color: var(--color-white);
-}
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-next,
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-prev {
-  width: auto;
-  color: var(--color-white);
-  padding: 8px 20px;
-}
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-next::after,
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-prev::after {
-  content: "";
-}
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-prev {
-  padding: 8px;
-  left: var(--space-9);
-  display: none;
-}
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-prev svg {
-  transform: translateX(4px);
-}
-@media screen and (min-width: 1014px) {
-  body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-prev {
-    display: flex;
-    border: none;
-  }
-}
-body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-next {
-  right: var(--space-3);
-}
-@media screen and (min-width: 1014px) {
-  body .main .section-1 .mySwiper .mySwiper__buttons .swiper-button-next {
-    right: var(--space-9);
-  }
-}
-body .main .section-2 {
-  background-color: var(--color-background-primary);
-  height: -moz-min-content;
-  height: min-content;
-  padding-top: var(--space-15);
-  padding-bottom: var(--space-15);
-  gap: var(--space-5);
-}
-body .main .section-2 .about__logo svg {
-  height: 10rem;
-  width: auto;
-  max-width: 100%;
-}
-body .main .section-3 {
-  text-align: center;
   padding-left: var(--space-5);
   padding-right: var(--space-5);
-  padding-bottom: var(--space-15);
-}
-body .main .section-3 .payment__h1 {
-  margin-top: var(--space-10);
-}
-body .main .section-3 .cards {
-  margin-top: var(--space-9);
-  margin-bottom: var(--space-9);
-  gap: var(--space-7);
-  flex-wrap: wrap;
-}
-body .main .section-3 .cards .card {
-  min-width: -moz-max-content;
-  min-width: max-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  gap: var(--space-2);
-  border: 1px solid black;
-  padding: var(--space-5);
-  width: 100%;
-}
-@media screen and (min-width: 1014px) {
-  body .main .section-3 .cards .card {
-    flex: 1;
-    width: 260px;
-  }
-}
-body .main .section-3 .cards .card h3,
-body .main .section-3 .cards .card p {
-  text-align: center;
-}
-body .main .section-3 .cards .card .card__icon {
-  height: 80px;
-}
-body .main .section-3 .cards .card .card__btn {
+  padding-top: var(--space-10);
+  padding-bottom: var(--space-10);
+  gap: var(--space-5);
   margin-right: auto;
   margin-left: auto;
 }
-body .main .section-3 .payment__p {
-  max-width: 950px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-body .main .section-3 .payment__p span {
-  color: red;
-}
-body .main .section-3 .payment__p .payment__btn {
-  font-size: 14px;
-  color: var(--color-primary-700);
-  text-decoration: underline;
-}
-body .main .section-3 .payment__p .payment__btn:hover {
-  color: red;
-}
-
-.section-new {
-  width: 100%;
-  padding-left: var(--space-1);
-  padding-right: var(--space-1);
-  padding-top: var(--space-10);
-  padding-bottom: var(--space-15);
-  overflow: hidden;
-}
-.section-new .products {
-  margin-top: var(--space-10);
-  -moz-column-gap: var(--space-2);
-       column-gap: var(--space-2);
-  row-gap: var(--space-5);
-  max-width: 100%;
-  display: grid;
-  overflow: hidden;
-  grid-template-columns: repeat(2, minmax(150px, 300px));
-  justify-content: center;
-}
-@media screen and (min-width: 558px) {
-  .section-new .products {
-    grid-template-columns: repeat(3, minmax(150px, 300px));
-  }
-}
-@media screen and (min-width: 758px) {
-  .section-new .products {
-    grid-template-columns: repeat(3, minmax(150px, 300px));
-  }
-}
 @media screen and (min-width: 1014px) {
-  .section-new .products {
-    grid-template-columns: repeat(4, minmax(150px, 300px));
+  body .main .section-1 {
+    flex-direction: row;
+    max-width: 1200px;
+    height: 500px;
   }
 }
-@media screen and (min-width: 1356px) {
-  .section-new .products {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    margin-left: var(--space-8);
-    margin-right: var(--space-8);
-  }
+body .main .section-1 h1 {
+  padding: var(--space-3);
+  flex: 1;
+  font-size: 5rem;
 }
-.section-new .products .product {
-  display: flex;
-  flex-direction: column;
-  position: relative;
+body .main .section-1__text {
+  flex: 1;
   gap: var(--space-3);
-  overflow: hidden;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
 }
-.section-new .products .product .product-slider {
-  aspect-ratio: 3/4;
-  width: 100%;
+body .main .section-1__text p {
   flex: 1;
 }
-.section-new .products .product .product-slider .product__btn {
-  display: none;
+body .main .stores {
+  width: 100%;
+  gap: var(--space-7);
+  padding: var(--space-7) var(--space-3);
+  padding-top: 0;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
 }
-@media screen and (min-width: 1014px) {
-  .section-new .products .product .product-slider .product__btn {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    z-index: 10;
-    background-color: var(--color-white);
-    color: var(--color-text);
-    opacity: 0;
-    transition: opacity 0.3 ease;
-    display: inline;
-  }
-  .section-new .products .product .product-slider .product__btn:hover {
-    text-decoration: underline;
-  }
+body .main .stores .store {
+  flex: 1;
+  width: 100%;
+  height: 100;
+  overflow: hidden;
+  gap: var(--space-5);
 }
-.section-new .products .product .product-slider .product-slider__slides {
-  cursor: pointer;
-}
-.section-new .products .product .product-slider .product-slider__slides .product-slider__slide {
+body .main .stores .store .store__map {
+  border: 1px solid black;
+  flex: 3;
+  width: 100%;
   overflow: hidden;
 }
-.section-new .products .product .product-slider .product-slider__slides .product-slider__slide .product-slider__img {
-  transition: transform 0.5s ease-out;
+body .main .stores .store .store__map iframe {
+  height: 100%;
+  height: 500px;
+  width: 100%;
 }
-.section-new .products .product .product-slider .product-slider__btns .swiper-button-prev {
-  transform: scaleX(-1);
-  left: -8px;
-}
-.section-new .products .product .product-slider .product-slider__btns .swiper-button-next {
-  right: -8px;
-}
-.section-new .products .product .product-slider .product-slider__btns div {
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 0;
-  width: 48px;
-  overflow: hidden;
-}
-.section-new .products .product .product-slider .product-slider__btns svg {
-  height: auto;
-  width: 32px;
-  fill: var(--color-primary-500);
-}
-.section-new .products .product .product__text {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-1);
-}
-.section-new .products .product .product__text .product__title,
-.section-new .products .product .product__text span {
-  font-size: 14px;
-}
-@media screen and (min-width: 1014px) {
-  .section-new .products .product .product__text .product__title,
-  .section-new .products .product .product__text span {
-    font-size: 16px;
-  }
-}
-@media (hover: hover) {
-  .section-new .products .product:hover .product-slider__img {
-    transform: scale(1.05);
-  }
-  .section-new .products .product:hover .product__btn {
-    opacity: 1;
-  }
-}
-.section-new .products .product:active .product__btn {
-  opacity: 1;
-}
-
-.section-4 {
-  padding-bottom: var(--space-10);
-}
-.section-4 .slider-hook .swiper-slide {
-  overflow: hidden;
-}
-.section-4 .slider-hook .swiper-slide img {
-  transition: transform 0.3s ease;
-}
-.section-4 .slider-hook .swiper-slide img:hover {
-  transform: scale(1.05);
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  content: "" !important;
+body .main .stores .store .store__text {
+  height: 100%;
+  flex: 1;
 }
