--- a/src/pug/blocks/product.pug
+++ b/src/pug/blocks/product.pug
@@ -1,6 +1,6 @@
 .product
     .swiper.product-slider
-        .product-slider__slides.swiper-wrapper
+        a( class="product-slider__slides swiper-wrapper" href=`${whatsapp} Me interesa https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600` target="blank")
             .product-slider__slide.swiper-slide
                 img(class="product-slider__img" src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600" alt="alt")
             .product-slider__slide.swiper-slide
@@ -11,13 +11,10 @@
             .product-slider-btn-prev.swiper-button-prev
                 <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960"><path d="m309.346-98.232-44.96-45.191L603.27-481.615l-338.884-338.5 44.96-44.884L692.73-481.615 309.346-98.232Z"/></svg>
         
-        a(class="product__btn mybtn" href="") Más información
+        a(class="product__btn mybtn" href=`${whatsapp} Me interesa https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600`  target="blank") Más información
     .product__text
         h4.h4.product__title Camiseta Básica Bart Break
         span 65.000 COP
-    .producto__bag
-        <svg class="bag__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960">
-            <path class="bag__icon--outline" d="M264.615-120Q237-120 218.5-138.5 200-157 200-184.615v-430.77Q200-643 218.5-661.5 237-680 264.615-680H340v-20q0-58.308 40.846-99.154T480-840q58.308 0 99.154 40.846T620-700v20h75.385Q723-680 741.5-661.5 760-643 760-615.385v430.77Q760-157 741.5-138.5 723-120 695.385-120h-430.77Zm0-40h430.77q9.23 0 16.923-7.692Q720-175.385 720-184.615v-430.77q0-9.23-7.692-16.923Q704.615-640 695.385-640H620v100q0 8.538-5.731 14.269Q608.539-520 600-520t-14.269-5.731Q580-531.462 580-540v-100H380v100q0 8.538-5.731 14.269Q368.539-520 360-520t-14.269-5.731Q340-531.462 340-540v-100h-75.385q-9.23 0-16.923 7.692Q240-624.615 240-615.385v430.77q0 9.23 7.692 16.923Q255.385-160 264.615-160ZM380-680h200v-20q0-42.231-28.885-71.115Q522.231-800 480-800q-42.231 0-71.115 28.885Q380-742.231 380-700v20ZM240-160v-480 480Z"/>
-            <path class="bag__icon--fill" d="M264.615-120Q237-120 218.5-138.5 200-157 200-184.615v-430.77Q200-643 218.5-661.5 237-680 264.615-680H340v-20q0-58.308 40.846-99.154T480-840q58.308 0 99.154 40.846T620-700v20h75.385Q723-680 741.5-661.5 760-643 760-615.385v430.77Q760-157 741.5-138.5 723-120 695.385-120h-430.77ZM380-680h200v-20q0-42.231-28.885-71.115Q522.231-800 480-800q-42.231 0-71.115 28.885Q380-742.231 380-700v20Zm220 160q8.539 0 14.269-5.731Q620-531.462 620-540v-100h-40v100q0 8.538 5.731 14.269Q591.461-520 600-520Zm-240 0q8.539 0 14.269-5.731Q380-531.462 380-540v-100h-40v100q0 8.538 5.731 14.269Q351.461-520 360-520Z"/>
-        </svg>
-        span.producto__bag_text agregar
+    //- .producto__bag
+    //-     include ../icons/icon-bolsa.pug
+    //-     span.product__bag_text agregar
