--- a/src/scss/scss omnibus/blocks/_footer.scss
+++ b/src/scss/scss omnibus/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   position: relative;
-  background-color: #dddddd;
+  background-color: #eeeeee;
   width: 100%;
   padding-left: var(--space-3);
   padding-right: var(--space-3);
