--- a/src/scss/scss pages/tiendas.scss
+++ b/src/scss/scss pages/tiendas.scss
@@ -73,6 +73,7 @@ body {
         max-width: 1200px;
         margin-right: auto;
         margin-left: auto;
+        margin-bottom: 10rem;
         .store{
             @extend .flex-center, .flex-column;
             flex: 1;
@@ -95,6 +96,8 @@ body {
                 @extend .flex-center;
                 height: 100%;
                 flex: 1;
+                width: 100%;
+                gap: var(--space-3);
             }
         }
     }
